<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General -->
    <string name="app_name">My Syllabi</string>
    <string name="okay">Done</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_delete_course">Delete Course</string>
    <string name="menu_item_refresh">Refresh View</string>

    <!-- Create New Course -->
    <string name="hint_course_name">Course ID</string>
    <string name="title_activity_create_course">Create New Course</string>
    <string name="hint_course_section">Section</string>
    <string name="hint_course_school">College or University</string>
    <string name="create_course_submit">Create Course</string>
    <string name="course_item_open_parenthetical">&#160;(</string>
    <string name="course_item_close_parenthetical">)</string>

    <string-array name="us_states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <!-- Modify Existing Course -->
    <string name="title_activity_modify_course">Edit Course</string>
    <string name="modify_course_submit">Save Course</string>
    <string name="hint_meeting_start">Start Time</string>
    <string name="hint_meeting_end">End Time</string>
    <string name="heading_course_meeting">Class Meetings</string>
    <string name="heading_instructor_contact">Instructor Information</string>
    <string name="heading_teaching_assistant">Add Teaching Assistant</string>
    <string name="heading_grade_composition">Grade Composition</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_office">Office ID</string>
    <string name="hint_office_hours">Office Hours</string>
    <string name="hint_class_meeting_time">Meeting Times</string>
    <string name="hint_classroom">Classroom</string>
    <string name="hint_meeting_days">Days of Week</string>
    <string name="hint_course_title">Title of Course</string>
    <string name="time_delimiter"> - </string>
    <string name="day_mon">M</string>
    <string name="day_tue">T</string>
    <string name="day_wed">W</string>
    <string name="day_thu">T</string>
    <string name="day_fri">F</string>
    <string name="day_sat">S</string>
    <string name="day_sun">S</string>
    <string name="title_activity_view_updates">View Updates</string>
    <string name="title_activity_modify_event_controller">Manage Event</string>
    <string name="hint_event_type">Event Title</string>
    <string name="hint_event_location">Event Location</string>
    <string name="hint_time">Event Time</string>
    <string name="hint_date">Event Date</string>
    <string name="save_event">Save Event</string>
    <string name="title_activity_list_events">List Events</string>
    <string name="title_activity_create_event">Create New Event</string>
    <string name="title_activity_events_list">Events List</string>
    <string name="course_filter">All Courses</string>
    <string name="title_activity_view_event">View Events</string>

</resources>
