<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uta.mysyllabi.ViewCourseController" >

    <item
        android:id="@+id/action_view_updates"
        android:orderInCategory="100"
        android:title="@string/title_activity_view_updates"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_create_course"
        android:orderInCategory="50"
        android:title="@string/title_activity_create_course"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_delete_course"
        android:orderInCategory="50"
        android:title="@string/menu_item_delete_course"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="50"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_modify_course"
        android:orderInCategory="50"
        android:title="@string/title_activity_modify_course"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_create_event"
        android:orderInCategory="50"
        android:title="@string/title_activity_create_event"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_list_events"
        android:orderInCategory="50"
        android:title="@string/title_activity_list_events"
        app:showAsAction="never"/>

</menu>
