<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    
    android:focusable="true"
    android:focusableInTouchMode="true"
    
    tools:context="edu.uta.mysyllabi.frontend.CreateCourseController" >
    
    <!-- display course id and section on the same line -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<!-- course id -->
		<EditText
			android:id="@+id/create_course_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_course_name"
			android:inputType="textCapCharacters"
			style="@style/InputField" />
		<!-- course section -->
		<EditText
			android:id="@+id/create_course_section"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="number"
			android:hint="@string/hint_course_section"
			style="@style/InputField" />
	</LinearLayout>
    
	<View
    	style="@style/Divider"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
       <LinearLayout 
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">
    		
           	<EditText
				android:id="@+id/modify_course_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords"
				android:hint="@string/hint_course_title"
				style="@style/InputField" />
    		
          	<TextView
				android:text="@string/heading_course_meeting"
				style="@style/Heading" />
			
			<EditText
				android:id="@+id/modify_classroom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapCharacters"
				android:hint="@string/hint_classroom"
				style="@style/InputField" />
            
            <LinearLayout
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/modify_meeting_start"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/hint_meeting_start"
			        android:layout_weight="1"
			        style="@style/DecoySpinner" />
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/time_delimiter" />
			        
			    <TextView
			        android:id="@+id/modify_meeting_end"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/hint_meeting_end"
			        android:layout_weight="1"
			        style="@style/DecoySpinner" />
	    	</LinearLayout>
	    	<TextView
				android:id="@+id/modify_meeting_days"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/hint_meeting_days"
			    style="@style/DecoySpinner" />
           	
            <View
    			style="@style/Divider"/>
            
	    	<TextView
				android:text="@string/heading_instructor_contact"
				style="@style/Heading" />
	    	
		    <LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" >
				<!-- course id -->
				<EditText
					android:id="@+id/modify_instructor_first_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/hint_first_name"
					android:inputType="textCapWords"
					style="@style/InputField" />
				<!-- course section -->
				<EditText
					android:id="@+id/modify_instructor_last_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:inputType="textCapWords"
					android:hint="@string/hint_last_name"
					style="@style/InputField" />
				<!-- course section -->
			</LinearLayout>
			<EditText
				android:id="@+id/modify_instructor_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:hint="@string/hint_phone"
				style="@style/InputField" />
			<EditText
				android:id="@+id/modify_instructor_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:hint="@string/hint_email"
				style="@style/InputField" />
			<EditText
				android:id="@+id/modify_instructor_office"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapCharacters"
				android:hint="@string/hint_office"
				style="@style/InputField" />
			  
			<!--<View
    			style="@style/Divider"/>
            
	    	<TextView
				android:text="@string/heading_teaching_assistant"
				android:onClick="addTeachingAssistant"
				style="@style/Heading" />
	    	
	    	<View
    			style="@style/Divider"/>
            
	    	<TextView
				android:text="@string/heading_grade_composition"
				style="@style/Heading" /> -->
	    	
	    	
	    </LinearLayout>
    </ScrollView>
    
	<!-- finish modifying course -->
    <Button
        android:id="@+id/modify_course_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_course_submit"
        android:onClick="modifyCourse"
        style="@style/SubmitButton" />
    
</LinearLayout>