<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uta.mysyllabi.SelectCourse" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_create_course"
        android:orderInCategory="50"
        android:title="@string/title_activity_create_course"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_delete_course"
        android:orderInCategory="50"
        android:title="@string/menu_item_delete_course"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_modify_course"
        android:orderInCategory="50"
        android:title="@string/title_activity_modify_course"
        app:showAsAction="never"/>

</menu>
